# nest-simulator

./:  pyproject.toml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  diff.diff  environment-explicit.yml  environment-explicit_min.yml  environment.yml  environment_spec-file_linux-64.txt  pyproject.toml  setup.py
.github/workflows/: build_nest_wheel.yml  build_wheels.yml  full_doc_build.yml  nestbuildmatrix.yml  testpypi_deploy.yml  wheel.yml
build_support/: modify_activate.py
cmake/: GenerateHelp.cmake  ProcessOptions.cmake
debian/: changelog  control  control.orig  copyright  nest.postinst  nest.postrm  rules
doc/: conf.py  contents.rst
doc/examples/: README.rst
doc/htmldoc/: api_function_list.json  conf.py
doc/py-examples/: BrodyHopfield.ipynb  BrodyHopfield.rst  balancedneuron.ipynb  balancedneuron.rst  brette_gerstner_fig_2c.ipynb  brette_gerstner_fig_2c.rst  brette_gerstner_fig_3d.ipynb  brette_gerstner_fig_3d.rst  brunel_alpha_evolution_strategies.ipynb  brunel_alpha_evolution_strategies.rst  brunel_alpha_nest.ipynb  brunel_alpha_nest.rst  brunel_alpha_numpy.ipynb  brunel_alpha_numpy.rst  brunel_delta_nest.ipynb  brunel_delta_nest.rst  hh_phaseplane.ipynb  (+48 more)
examples/: run_examples.sh
extras/: docker_run.sh  travis_tests.sh
libnestutil/: CMakeLists.txt  config.h.in
models/: CMakeLists.txt
nest_wheel_test.egg-info/: PKG-INFO  SOURCES.txt
nestkernel/: CMakeLists.txt  module_manager.cpp
pynest/: CMakeLists.txt  do_tests.py.in
sli/: CMakeLists.txt  processes.cc  sli_io.cc  slistartup.cc  slistartup.h  whereami.h
testsuite/: do_tests.sh  do_tests.sh.in  run_test.sh
(+20 files in other folders)
