
[build-system]
requires = [
  "setuptools>=42",
  "scikit-build>=0.13",
  "cmake>=3.18",
  "wheel",
  "Cython",
  "pathlib",
  "ninja; platform_system!='Windows'",
  "gsl",
  "readline",
  "boost",
  "pkgconfig"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "skipif_missing_gsl: skip test if NEST was built without GSL support",
    "skipif_missing_hdf5: skip test if NEST was built without HDF5 support",
    "skipif_missing_mpi: skip test if NEST was built without MPI support",
    "skipif_missing_threads: skip test if NEST was built without multithreading support",
    "simulation: the simulation class to use. Always pass a 2nd dummy argument"
]

[tool.isort]
profile = "black"
known_third_party = "nest"

[tool.black]
line-length = 120
